<resources>
    <string name="app_name">Gift &amp; Flower Delivery App</string>
    <string name="favorite">Favorite</string>
    <string name="more_actions">More actions</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">$ 35.00</string>
    <string name="product_image">Product Image</string>
    <string name="add_to_cart">Add to Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Cart</string>
    <string name="delete_button">Delete button</string>
    <string name="notes">Notes</string>
    <string name="notes_for_the_shop">Notes for the shop</string>
    <string name="proceed">Proceed</string>
    <string name="submit">Submit</string>
    <string name="delivered">Delivered</string>
    <string name="pick_up">Pick-up</string>
    <string name="order">Order</string>
    <string name="share">Share</string>
    <string name="cart_empty">Your Cart is Empty</string>
</resources>