<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp">

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/lyt_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical"
            android:focusable="true">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/flower_photo"
                android:contentDescription="@string/product_image" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="@dimen/spacing_middle"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xmedium"
                    android:layout_weight="2"
                    android:text="@string/product_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/black" />

                <ImageButton
                    android:id="@+id/favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/spacing_xlarge"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:srcCompat="@drawable/ic_baseline_favorite_24"
                    app:tint="@color/black"
                    android:contentDescription="@string/favorite" />

                <ImageButton
                    android:id="@+id/more"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/spacing_xlarge"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:srcCompat="@drawable/ic_baseline_more_vert_24"
                    app:tint="@color/black"
                    android:contentDescription="@string/more_actions" />

                <View
                    android:layout_width="@dimen/spacing_small"
                    android:layout_height="0dp" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="@dimen/spacing_middle"
                    android:layout_height="0dp" />

                <androidx.appcompat.widget.AppCompatRatingBar
                    style="@style/RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:numStars="5"
                    android:rating="3.5"
                    android:stepSize="1"
                    android:theme="@style/RatingBar" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_price"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <View
                    android:layout_width="@dimen/spacing_middle"
                    android:layout_height="0dp" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle" />

        </LinearLayout>

    </com.balysv.materialripple.MaterialRippleLayout>

</androidx.cardview.widget.CardView>